# small-audio-data-aug

./: .gitattributes  .gitignore  LICENSE  README.md  animal_sounds_embeddings.csv  dataset_analysis.ipynb  dataset_analysis_real.ipynb  download_data.py  emotion_to_wav.py  generate_synthetic_data.py  llm_generated_utterances.py  pyproject.toml  run_synthetic.sh  synthetic_data_embeddings.csv  train_embeddings.csv  validate.py
MELD/: download_script.ipynb  process_data.py
blog/: index.html
speechbrain/IEMOCAP/emotion_recognition/: evaluate_with_wav2vec2.py  test_emo_recognition.py  train_with_wav2vec2.py
speechbrain/IEMOCAP/emotion_recognition/mine/: data_prep.py  dataset.py  model.py  train.py
speechbrain/emotion_recognition/: README.md  evaluate_with_wav2vec2.py  train_with_wav2vec2.py  train_with_wav2vec2_no_val.py
speechbrain/emotion_recognition/IEMOCAP/: iemocap_prepare.py  myiemocap_prepare.py
speechbrain/emotion_recognition/MELD/: meld_prepare.py
speechbrain/emotion_recognition/MELD/meld_json/: eval.json  (+2 more)
speechbrain/emotion_recognition/SYNTHETIC/: synthetic_prepare.py
speechbrain/emotion_recognition/hparams/: IEMOCAP_train_with_wav2vec2.yaml  MELD_train_frozen_synthetic.yaml  MELD_train_frozen_synthetic_small_with_wav2vec2.yaml  MELD_train_iemocap_small_with_wav2vec2.yaml  MELD_train_small_with_wav2vec2.yaml  MELD_train_synthetic.yaml  MELD_train_synthetic_small_with_wav2vec2.yaml  MELD_train_with_wav2vec2.py  MELD_train_with_wav2vec2.yaml  eval_with_wav2vec2.yaml  my_IEMOCAP_train_with_wav2vec2.yaml
speechbrain/speechbrain/dataio/: dataio.py
(+5 files in other folders)
