[tool.poetry]
name = "small-audio-data-aug"
version = "0.1.0"
description = ""
authors = ["Ethan Siegel <ewsiegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
transformers = "^4.47.0"
torchaudio = "^2.5.1"
f5-tts = {git = "https://github.com/SWivid/F5-TTS.git"}
dropbox = "^12.0.2"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
