[tool.poetry]
name = "small-audio-data-aug"
version = "0.1.0"
description = ""
authors = ["Ethan Siegel <ewsiegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface_hub = ">=0.8.0"
hyperpyyaml = ">=0.0.1"
joblib = ">=0.14.1"
numpy = ">=1.17.0"
packaging = "*"
pandas = ">=1.0.1"
pre-commit = ">=2.3.0"
pygtrie = ">=2.1,<3.0"
sentencepiece = ">=0.1.91"
SoundFile = { version = "*", markers = "sys_platform == 'win32'" }
speechbrain = { path = "speechbrain", develop = true }
torch = "^2.5.1"
tqdm = ">=4.42.0"
transformers = ">=4.30.0"
torchaudio = "^2.5.1"
f5-tts = {git = "https://github.com/SWivid/F5-TTS.git"}
dropbox = "^12.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
